--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@
     <meta charset="UTF-8">
     <title>Class Project Proposal</title>
   </head>
+<body>
+  <hi>Product Name</hi>
+  <p>I'm not sure what it is supposed to be about</p>
+</body>
