--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Class Project Proposal</title>
+    <hi>Class Project Proposal</hi>
   </head>
 <body>
   <hi>Product Name</hi>
