--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <body>
     <meta charset="UTF-8">
     <hi>Class Project Proposal</hi>
-  </head>
+  </body>
 <body>
   <hi>Product Name</hi>
-  <p>I'm not sure what it is supposed to be about</p>
+          <p>I'm not sure what it is supposed to be about</p>
 </body>
