--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
-  <body>
-    <hi>Class Project Proposal</hi>
-  </body>
+  <heading>
+    <title>Class Project Proposal</title>
+  </heading>
   
-
   <body>
   <hi>Product Name</hi>
           <p>I'm not sure what it is supposed to be about</p>
