--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  
-  <heading>
+  <head>
     <title>Class Project Proposal</title>
-  </heading>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            line-height: 1.6;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        .main-info {
+            background: #333;
+            color: #fff;
+            padding: 20px;
+        }
+        .main-info h1 {
+            margin: 0;
+        }
+        .product name {
+            background: #e7e7e7;
+            padding: 15px;
+            margin-bottom: 10px;
+        }
+    </style>
   
   <body>
-  <hi>Product Name</hi>
+  <h1>Product Name</h1>
           <p>I'm not sure what it is supposed to be about</p>
 </body>
