--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-  <head>
+  <!DOCTYPE html>
+<html>
+<head>
     <title>Class Project Proposal</title>
     <style>
         body {
@@ -20,14 +21,49 @@
         .main-info h1 {
             margin: 0;
         }
-        .product name {
+        .name, .application, .technology, .feature, .technical, .date {
             background: #e7e7e7;
             padding: 15px;
             margin-bottom: 10px;
         }
     </style>
-  
-  <body>
-  <h1>Product Name</h1>
-          <p>I'm not sure what it is supposed to be about</p>
+</head>
+<body>
+    <div class="container">
+        <header class="main-info">
+            <h1>Allison Losso</h1>
+            
+        </header>
+
+        <section class="name">
+			<h2>Product Name</h2>
+			<p>ENTER PRODUCT NAME</p>
+        </section>
+
+		<section class="application">
+            <h2>Application Overview</h2>
+            <p>ENTER APP OVERVIEW</p>
+        </section>
+
+		<section class="technology">
+            <p>Technology Overview</p>
+			<p>ADD TECHNOLOGY OVERVIEW</p>
+        </section>		
+
+        <section class="feature">
+            <h2>Current and Future Feature List</h2>
+            <p>ADD CURRENT AND FUTURE FEATURE LIST</p>
+        </section>
+
+        <section class="technical">
+            <h2>Basic and Advanced Technical Features</h2>
+            <p>ADD BASIC AND ADVANCED TECHNICAL FEATURES</p>
+        </section>
+      
+      <section class="date">
+            <h2>Date Last Edited</h2>
+            <p>3/23/2025</p>
+        </section>
+    </div>
 </body>
+</html>
