--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
 
 		<section class="technology">
-            <p>Technology Overview</p>
+            <h2>Technology Overview</h2>
 			<p>ADD TECHNOLOGY OVERVIEW</p>
         </section>		
 
