--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
 
         <section class="name">
 			<h2>Product Name</h2>
-			<p>ENTER PRODUCT NAME</p>
+			<p>DEALFINDER</p>
         </section>
 
 		<section class="application">
             <h2>Application Overview</h2>
-            <p>ENTER APP OVERVIEW</p>
+            <p>DEALFINDER is an application that allows the user to add a product they are in the market for. The application will then search the web for the best option based on the price and reviews.The user can add their products they are looking for, get results instantly, get notifications on price reductions and purchase straight from the application.</p>
         </section>
 
 		<section class="technology">
             <h2>Technology Overview</h2>
-			<p>ADD TECHNOLOGY OVERVIEW</p>
+			<p>Languages that will be used Python, CSS, JavaScript, HTML. The platform will be through Github at "https://yourusername.github.io/DEALFINDER".</p>
         </section>		
 
         <section class="feature">
             <h2>Current and Future Feature List</h2>
-            <p>ADD CURRENT AND FUTURE FEATURE LIST</p>
+            <p>Current features include: searching multiple websites for products through one application, instant results, account setup, AI diagnostic, notification setup. Future features to look out for include: Integration of stores and directions to nearest location with product and incorperation of smaller businesses.</p>
         </section>
 
         <section class="technical">
@@ -62,7 +62,7 @@
       
       <section class="date">
             <h2>Date Last Edited</h2>
-            <p>3/23/2025</p>
+            <p>4/6/2025</p>
         </section>
     </div>
 </body>
