--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
 
         <section class="name">
 			<h2>Product Name</h2>
-			<p>DEALFINDER</p>
+			<p>The Bookbag</p>
         </section>
 
 		<section class="application">
             <h2>Application Overview</h2>
-            <p>DEALFINDER is an application that allows the user to add a product they are in the market for. The application will then search the web for the best option based on the price and reviews.The user can add their products they are looking for, get results instantly, get notifications on price reductions and purchase straight from the application.</p>
+            <p>The Bookbag is an application that allows the user to track their book current, past and present. It allows the user to rank them by date they read, how many stars etc. The user is able to put their books inot categories of currently reading, 1 star, 2 stars, 3 stars, 4 stars, 5 stars, 6 stars and DNF. Among other features.</p>
         </section>
 
 		<section class="technology">
             <h2>Technology Overview</h2>
-			<p>Languages that will be used Python, CSS, JavaScript, HTML. The platform will be through Github at "https://yourusername.github.io/DEALFINDER".</p>
+			<p>Languages that will be used Python, CSS, JavaScript, HTML. The platform will be through Github at "https://yourusername.github.io/Bookbag".</p>
         </section>		
 
         <section class="feature">
             <h2>Current and Future Feature List</h2>
-            <p>Current features include: searching multiple websites for products through one application, instant results, account setup, AI diagnostic, notification setup. Future features to look out for include: Integration of stores and directions to nearest location with product and incorperation of smaller businesses.</p>
+            <p>Current features include: keeping track of book and reviews of books, sharing thoughts with others, organization, profile modification. Future features to look out for include: Able to have friends throughout the app and being able to create book club groups within the app for those who don't have time to meet in person.</p>
         </section>
 
         <section class="technical">
@@ -62,7 +62,7 @@
       
       <section class="date">
             <h2>Date Last Edited</h2>
-            <p>4/6/2025</p>
+            <p>4/17/2025</p>
         </section>
     </div>
 </body>
