--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
 
 		<section class="application">
             <h2>Application Overview</h2>
-            <p>The Bookbag is an application that allows the user to track their book current, past and present. It allows the user to rank them by date they read, how many stars etc. The user is able to put their books inot categories of currently reading, 1 star, 2 stars, 3 stars, 4 stars, 5 stars, 6 stars and DNF. Among other features.</p>
+            <p>The Bookbag is an application that allows the user to track their book current, past and present.</p>
         </section>
 
 		<section class="technology">
             <h2>Technology Overview</h2>
-			<p>Languages that will be used Python, CSS, JavaScript, HTML. The platform will be through Github at "https://yourusername.github.io/Bookbag".</p>
+			<p>Languages that will be used Python, CSS, JavaScript, HTML. The platform will be through Github at "https://yourusername.github.io/TheBookbag".</p>
         </section>		
 
         <section class="feature">
             <h2>Current and Future Feature List</h2>
-            <p>Current features include: keeping track of book and reviews of books, sharing thoughts with others, organization, profile modification. Future features to look out for include: Able to have friends throughout the app and being able to create book club groups within the app for those who don't have time to meet in person.</p>
+            <p>Current features include: keeping track of book and reviews of books. Future features to look out for include: Able to creat a profile and customize the profile, have friends throughout the app and being able to create book club groups within the app for those who don't have time to meet in person.</p>
         </section>
 
         <section class="technical">
             <h2>Basic and Advanced Technical Features</h2>
-            <p>ADD BASIC AND ADVANCED TECHNICAL FEATURES</p>
+            <p>Basic features is adding books to your shelf. Advanced features allows you to sort the books onto which shelf they go to.</p>
         </section>
       
       <section class="date">
             <h2>Date Last Edited</h2>
-            <p>4/17/2025</p>
+            <p>5/9/2025</p>
         </section>
     </div>
 </body>
